<resources>
    <string name="app_name">ClassRep</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="profile">Profile</string>
    <string name="or">or</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
<<<<<<< HEAD
    <string name="instructor_id">techmail</string>
    <string name="student_id">index number</string>
    <string name="password">password</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
=======
    <string name="instructor_id">Techmail</string>
    <string name="student_id">Index number</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
>>>>>>> de8ef97882507ee65dbc280704872c516e30d3ec
    <string name="college">College</string>
    <string name="programme">Programme</string>
    <string name="year">Year</string>
    <string name="retype_password">retype password</string>
    <string name="title_activity_courses">CoursesActivity</string>
    <string name="courses">Courses</string>
    <string name="timetable">Timetable</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
<<<<<<< HEAD
=======
    <string name="send_message">Send message</string>
    <string name="vote_up">Vote Up</string>
    <string name="vote_down">Vote Down</string>
    <string name="message">message</string>
    <string name="vote">vote</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="start_time">Start time</string>
    <string name="duration">Duration(hours)</string>
    <string name="update">Update</string>
    <string name="title">title</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
>>>>>>> de8ef97882507ee65dbc280704872c516e30d3ec
</resources>
