<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
<<<<<<< HEAD
    <item
        android:id="@+id/send_message"
        android:icon="@drawable/ic_send_black_24dp"
        android:menuCategory="container"
        android:title="@string/send_message"
        app:showAsAction="never" />
    <item
        android:id="@+id/view_timetable"
        android:icon="@drawable/ic_timetable_24dp"
        android:title="@string/timetable" />
=======

    <item
        android:id="@+id/view_timetable"
        android:icon="@drawable/ic_timetable_white_24dp"
        android:title="@string/timetable"
        app:showAsAction="ifRoom"/>
>>>>>>> 43472d64ddc513de0ab2db5c474cd328cc28f1b2


</menu>